--- a/index.html
+++ b/index.html
@@ -16,17 +16,60 @@
 
 	<div class = "hero" id="home">
 		<div class = "hero-text">
-			<h1> Testing </h1>
+			<h1> Noah Davis </h1>
 		</div>
 	</div>
 	
 	<div id="navbar">
 		<a href="javascript:void(0);"  class="icon" onclick="mobileNavbar()">&#9776;</a>
 		<a href="#home">Home</a>
-		<a href="#webhistory">Data</a>
+		<a href="#dataviz">Vizualization</a>
+		<a href="#data">Data</a>
 	</div> 
 	
 	<script type="text/javascript" src="assets/js/navbar.js"></script>
+
+	<div id="dataviz">
+
+		<div class="grid">
+			<div class="legendTitle">
+				<h2> Legend </h2>
+			</div>
+
+
+			<div class="percentRead">
+				<h3> Percentage of an Article Read </h3>
+				<img src="assets/img/PercentRead.svg" alt="Percent of Articles Read" class="percentReadImg">
+			</div>
+			
+			<div class="numberRead">
+					<h3> How Many Articles Have I Read </h3>
+					<img src="assets/img/howManyArticlesRead.svg" alt="How Many Articles Read" class="numberReadImg">
+			</div>
+
+			<div class="articleSource">
+				<h3> Articles </h3>
+				<img src="assets/img/sourceOfArticles.svg" alt="Source of Articles" class="articleSourceImg">
+				<h3> Source </h3>
+			</div>
+
+			<div class="sourceName">
+				<h3> Source Name </h3>
+				<img src="assets/img/sourceName.svg" alt="Name of Source" class="sourceNameImg">
+			</div>
+
+
+			<div class="treeTitle">
+				<h2> How Much of an Article Did I Finish? <h2>
+			</div>
+
+			<div class="tree">
+				<img src="assets/img/ENGL3844Project1-left.svg" alt="Noah Davis Dataviz" class="treeImg">
+			</div>
+
+		</div>
+		
+	</div>
 
 	<div id="data">
 	<div style="overflow-x:auto;">
